# rook_lifewatch

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
doc/: request_signature_client.md  system_summary.md
rook_lw_admin/: Cargo.toml  README.md  make.py
rook_lw_admin/scripts/: build.sh  install.sh
rook_lw_admin/src/: app.rs  app_state.rs  controllers.rs  errors.rs  lib.rs  main.rs  middleware.rs  services.rs  templates.rs
rook_lw_admin/src/app/: app_state.rs  configuration.rs
rook_lw_admin/src/controllers/: admin.rs  daemon.rs  directory.rs  hello.rs  home.rs  image.rs  mod.rs  process.rs  server.rs  user.rs
rook_lw_admin/src/middleware/: signature_validation.rs
rook_lw_admin/src/services/: daemon_service.rs  password_hash_service.rs  request_signature_service.rs  user_service.rs
rook_lw_admin/src/templates/: directory.rs  home.rs  mod.rs
rook_lw_admin_fe/: .gitignore  Cargo.toml  index.html  make.py
rook_lw_admin_fe/dev_scripts/: fix_fontawesome.py
rook_lw_admin_fe/scripts/: add-dev-deps.sh  build.sh  clean.sh  install.sh  run-dev.sh
rook_lw_admin_fe/src/: components.rs  errors.rs  lib.rs  main.rs  services.rs
rook_lw_admin_fe/src/components/: admin.rs  app.rs  daemon_control.rs  error_display.rs  image_display.rs  image_search.rs  login.rs  mod.rs  navbar.rs  protected_route.rs  scroll_to_top.rs  serverops.rs
rook_lw_admin_fe/src/components/admin/: admin.rs
rook_lw_admin_fe/src/components/app/: app.rs
rook_lw_admin_fe/src/components/daemon/: daemon_control.rs  mod.rs
rook_lw_admin_fe/src/components/image_search/: image_search.rs  mod.rs
rook_lw_admin_fe/src/services/: base64_serde.rs  daemon_service.rs  image_info_service.rs  login_service.rs  mod.rs  request_signer.rs  request_signing.rs  response_util.rs  serverops_service.rs  user_service.rs
rook_lw_admin_fe/static/: style.css
rook_lw_create_sysroot/: README.md  check-setup.sh  check-sudo.sh  create-sysroot-copy.sh  download-sysroot-from-pi.sh  fix-symlinks.sh  install-dev-packages.sh  setup.sh  (+3 more)
rook_lw_daemon/: Cargo.toml  README.md  build.rs  make.py
rook_lw_daemon/config/: rook_lw_daemon.toml
rook_lw_daemon/docs/: coding_guidelines.md  frame_source_factory.md  initial_high_level_design.md
rook_lw_daemon/scripts/: build.sh  clean.sh  install.sh  start_rook_lw_daemon.sh
rook_lw_daemon/src/: app.rs  error.rs  events.rs  image.rs  lib.rs  main.rs  stats.rs  tasks.rs
rook_lw_daemon/src/app/: app.rs  app_configuration.rs  app_factory.rs  configuration.rs  logging.rs  mod.rs
rook_lw_daemon/src/core/: frame.rs  mod.rs  motion.rs  pipeline.rs
rook_lw_daemon/src/events/: capture_event.rs  command_event.rs  image_processing_event.rs  mod.rs  motion_detection_event.rs  storage_event.rs
rook_lw_daemon/src/image/: conversions.rs  fourcc.rs  frame.rs  frame_slot.rs  frame_source_factory.rs  libcamera.rs  mod.rs  object_detection.rs  yplane.rs
rook_lw_daemon/src/image/examine/: mod.rs  object_detector.rs
rook_lw_daemon/src/image/frame/: frame.rs  frame_slot.rs  frame_source.rs  frame_source_factory.rs
rook_lw_daemon/src/image/libcamera/: capture_request_status.rs  ffi.rs  lib_camera_frame.rs  lib_camera_frame_source.rs  mod.rs
rook_lw_daemon/src/image/motion/: boxed_average.rs  mod.rs  motion_detector.rs  motion_percentile.rs  normalized_avg_diff.rs  yplane_boxed_average_motion_detector.rs  yplane_motion_detector.rs  yplane_motion_percentile_detector.rs  yplane_rollingz_motion_detector.rs
rook_lw_daemon/src/image/object_detection/: mod.rs  object_detector.rs  onnx_object_detector.rs  opencv_object_detector.rs  yolov8_object_detector.rs
rook_lw_daemon/src/image/opencv/: frame.rs  frame_source.rs  mod.rs  opencv_frame.rs  opencv_frame_source.rs
rook_lw_daemon/src/implementation/: factory.rs  mod.rs
rook_lw_daemon/src/implementation/libcamera/: capture_request_status.rs  ffi.rs  lib_camera_frame.rs  lib_camera_frame_source.rs  mod.rs
rook_lw_daemon/src/implementation/opencv/: mod.rs
rook_lw_daemon/src/pipeline/: mod.rs  simple_motion.rs
rook_lw_daemon/src/platform/: mod.rs
rook_lw_daemon/src/platform/desktop/: mod.rs
rook_lw_daemon/src/platform/rpi/: mod.rs
rook_lw_daemon/src/prodcon/: consumer_task.rs  mod.rs  producer_callbacks.rs  producer_task.rs
rook_lw_daemon/src/repo/: image_info_repository.rs  image_info_repository_sqlite.rs  mod.rs
rook_lw_daemon/src/stats/: mod.rs  rollingz.rs
rook_lw_daemon/src/tasks/: batch_image_object_detector.rs  image_capturer.rs  image_detector.rs  image_diff_motion_watcher.rs  image_storer.rs  mod.rs  motion_watcher.rs  radar_motion_watcher.rs
rook_lw_image_repo/: .gitignore  Cargo.toml  make.py
rook_lw_image_repo/sql/: migrate_detections_to_detection_result.sql
rook_lw_image_repo/src/: error.rs  lib.rs  user_repo.rs
rook_lw_image_repo/src/image_info/: image_info_repository.rs  image_info_repository_sqlite.rs  mod.rs
rook_lw_image_repo/src/image_store/: image_store_repository.rs  image_store_repository_file.rs  mod.rs
rook_lw_image_repo/src/sqlite/: mod.rs  r2d2.rs
rook_lw_image_repo/src/user_repo/: user_repository.rs  user_repository_sqlite.rs
rook_lw_libcamera_capture/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make.py  setup-cross-compiler-env.sh
rook_lw_libcamera_capture/cmake/toolchains/: rpi-arm64-sysroot.cmake
rook_lw_libcamera_capture/include/rook_lw_libcamera_capture/: rook_lw_libcamera_capture.h  rook_lw_libcamera_capture.hpp
rook_lw_libcamera_capture/scripts/: build.sh  clean.sh  install.sh
rook_lw_libcamera_capture/src/: rook_lw_libcamera_camera_capture_request_ffi.cpp  rook_lw_libcamera_camera_capture_request_mapped_plane.cpp  rook_lw_libcamera_camera_capturer.cpp  rook_lw_libcamera_camera_capturer_ffi.cpp  rook_lw_libcamera_capture.cpp  rook_lw_libcamera_capture_core.cpp  rook_lw_libcamera_capture_ffi.cpp  rook_lw_libcamera_capture_request.cpp  rook_lw_libcamera_capture_request_mapped_plane.cpp  rook_lw_libcamera_ffi.cpp
rook_lw_libcamera_capture/tools/camera_capturer_test/: main.cpp
rook_lw_libcamera_capture/tools/capture10/: main.cpp
(+79 files in other folders)
