[package]
name = "rook_lw_admin"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = { version = "4.12.1", features = ["rustls"] }
rustls = "0.20.9"
rustls-pemfile = "1.0"
env_logger = "0.11.8"

# For server-side HTML templating
maud = "0.26"

# For structured logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
chrono = "0.4"
sysinfo = "0.37.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
rook_lw_models = { path = "../rook_lw_models" }
rook_lw_image_repo = { path = "../rook_lw_image_repo" }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
thiserror = "2.0.18"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
clap = { version = "4.5.54", features = ["derive"] }
