[package]
name = "rook_lw_admin_fe"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.15", features = ["csr"] }
rook_lw_models = { path = "../rook_lw_models" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
