[package]
name = "rook_lw_admin_fe"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.6.0"
humantime = "2.3.0"
js-sys = "0.3"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"
num-format = "0.4.4"
rook_lw_models = { path = "../rook_lw_models" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "0.15.0"
sha2 = "0.10"
thiserror = "2.0.18"
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
wasm-tracing = "2.1.0"
web-sys = { version = "0.3.85", features = [
    "Storage",
    "Window",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "Pbkdf2Params",
    "HmacImportParams",
    "HmacKeyGenParams",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
