[package]
name = "rook_lw_daemon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
build = "build.rs"

[features]
default = []
libcamera = []
opencv = ["dep:opencv"]

[dependencies]
anyhow = "1"
image = "0.25"
thiserror = "2"
self_cell = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
pkg-config = "0.3"

[dependencies.opencv]
version = "0.95"
default-features = false
features = ["videoio", "imgproc"]
optional = true
