[package]
name = "rook_lw_daemon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
build = "build.rs"

[features]
default = []
libcamera = ["libc"]
opencv = []

[dependencies]
anyhow = "1"
image = "0.25"
thiserror = "2"
self_cell = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.11", features = [ "load-dynamic" ] }
ndarray = "0.16"
rook_lw_models = { path = "../rook_lw_models" }
rook_lw_image_repo = { path = "../rook_lw_image_repo" }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
libc = { version = "0.2", optional = true }

[build-dependencies]
pkg-config = "0.3"

[dependencies.opencv]
version = "0.95"
default-features = false
features = ["videoio", "imgproc", "dnn", "imgcodecs"]

